[gd_scene load_steps=3 format=2]

[ext_resource path="res://vfx/shaders/maujoe.flowmap_shader/demo/scripts/example.gd" type="Script" id=1]
[ext_resource path="res://vfx/shaders/maujoe.flowmap_shader/demo/scripts/camera_control/camera_control.gd" type="Script" id=2]


[node name="Controls" type="Node" index="0"]

[node name="Control" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="ExampleSwitcher" type="OptionButton" parent="Control" index="0"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -65.0
margin_right = 39.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="ExampleOption" type="OptionButton" parent="Control" index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -35.0
margin_right = 39.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Camera" type="Camera" parent="." index="1"]

transform = Transform( 0.457955, -0.272284, 0.846249, 0, 0.951938, 0.30629, -0.888975, -0.140267, 0.435945, 54.729, 29.649, 14.8872 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 500.0
script = ExtResource( 2 )
enabled = true
mouse_mode = 2
mouselook = true
sensitivity = 0.5
smoothness = 0.99
privot = null
distance = 5.0
rotate_privot = false
collisions = true
yaw_limit = 360
pitch_limit = 360
movement = true
acceleration = 1.0
deceleration = 0.1
max_speed = Vector3( 10, 10, 10 )
local = true
forward_action = "ui_up"
backward_action = "ui_down"
left_action = "ui_left"
right_action = "ui_right"
up_action = "ui_page_up"
down_action = "ui_page_down"
use_gui = true
gui_action = "ui_cancel"

[connection signal="item_selected" from="Control/ExampleSwitcher" to="Control" method="_on_ExampleSwitcher_item_selected"]

[connection signal="item_selected" from="Control/ExampleOption" to="Control" method="_on_ExampleOption_item_selected"]


